# Playground

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile.base  base.Dockerfile
.devcontainer/HttpServer/: Dockerfile  devcontainer.json
HttpServer/: CMakeLists.txt
HttpServer/src/: CMakeLists.txt  HttpRequest.hpp  HttpRequestParser.hpp  HttpServer.cpp  HttpServer.hpp  IHttpRequestParser.hpp  IRequestHandler.hpp  RequestHandler.hpp  main.cpp
Logger/: CMakeLists.txt
Logger/include/Logger/: Logger.hpp
Logger/src/: CMakeLists.txt  Logger.cpp
